objects/sumoapp__Process__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__WhenPriceLabel__c</fullName>
        <label>When Price Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__WhenSpacesLabel__c</fullName>
        <label>When Spaces Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__WhenSubHeader__c</fullName>
        <label>When Sub-Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__WhereNotes__c</fullName>
        <label>Where Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__WhereSubHeader__c</fullName>
        <label>Where Sub-Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__WhoEmployees__c</fullName>
        <label>Who Employees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__WhoFilter__c</fullName>
        <label>Who Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__WhoSubHeader__c</fullName>
        <label>Who Sub-Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__YourLocationDetails__c</fullName>
        <label>Your Location - Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__YourLocationSubHeader__c</fullName>
        <label>Your Location Sub-Header Text</label>
        <type>TextArea</type>
    </fields>
    <label>SUMO Scheduling Process</label>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>Scheduling Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Scheduling Processes</pluralLabel>
    <recordTypes>
        <fullName>sumoapp__EventScheduler</fullName>
        <active>true</active>
        <label>Event Scheduler</label>
    </recordTypes>
    <recordTypes>
        <fullName>sumoapp__InviteManager</fullName>
        <active>true</active>
        <label>Invite Manager</label>
    </recordTypes>
    <recordTypes>
        <fullName>sumoapp__OnlineScheduler</fullName>
        <active>true</active>
        <label>Online Scheduler</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>